adding page with camera

--- a/flask_server/website/templates/classes.html
+++ b/flask_server/website/templates/classes.html
@@ -38,27 +38,19 @@
                 </div>
                 </a>
 
-                <a href="/P2/">
+                <a href="/P1/">
                     <div class="class-boxes">
                         <div>
-                            <span>Period 2</span>
-                            <h3># students</h3>
+                            <span>Start Period 1</span>
                         </div>
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </div>
                     </a>
                 
+
             </div>
 
-            <div class="create-buttons">
-                <a href="Newclass.html">
-                    <div class="new-class-button">
-                        <div class="new-class-button-wrapper">
-                            <i class="fa-solid fa-plus"></i>
-                            New Class
-                        </div>
-                    </div>
-                </a>
+        
 
                 <a href="/">
                     <div class="edit-classes-button">
