--- a/flask_server/website/templates/classes.html
+++ b/flask_server/website/templates/classes.html
@@ -37,27 +37,17 @@
                     <i class="fa-solid fa-arrow-right-long"></i>
                 </div>
                 </a>
-            </div>
 
             <div class="create-buttons">
-                <!--<a href="Newclass.html">
+                <a href="Newclass.html">
                     <div class="new-class-button">
                         <div class="new-class-button-wrapper">
                             <i class="fa-solid fa-plus"></i>
                             New Class
                         </div>
+                        <i class="fa-solid fa-arrow-right-long"></i>
                     </div>
-                </a> -->
-             <button type="submit" class="new-class-button">
-                <form method="POST">
-                    <div align="center">
-                      <div class="new-class-button-wrapper">
-                        <i class="fa-solid fa-plus"></i>
-                        New Class
-                      </div>
-                    </div>
-                </button>    
-            </form>
+                </a>
 
                 <a href="/">
                     <div class="edit-classes-button">
